--- a/project-1/index.html
+++ b/project-1/index.html
@@ -9,17 +9,15 @@
 <body>
 
         <nav>
-            
-                <a href="#">About Me</a>
-                <a href="#">Skills</a>
-                <a href="#">Project</a>
-                <a href="#">Contact</a>
-            
+           <a href="#">About Me</a>
+           <a href="#">Skills</a>
+           <a href="#">Project</a>
+            <a href="#">Contact</a>
         </nav>
 
     <section class="hero">
         <div class="hero-text">
-            <h1>Hi 👋,<br>I'm Charles,<span>Front-end Developer</span></h1>
+            <h1>Hi 👋,<br> <span>I'm Charles,</span> Front-end Developer</h1>
             <p>I design and develop experiences that make people's lives simple through web and mobile apps. I work with Figma, HTML5, CSS3, Javascript, React, ReactNative and Flutter.</p>
             <div class="buttons">
                 <a href="#" class="btn outline">Hire ME</a>
