--- a/project-1/index.html
+++ b/project-1/index.html
@@ -20,8 +20,8 @@
             <h1>Hi 👋,<br> <span>I'm Charles,</span> Front-end Developer</h1>
             <p>I design and develop experiences that make people's lives simple through web and mobile apps. I work with Figma, HTML5, CSS3, Javascript, React, ReactNative and Flutter.</p>
             <div class="buttons">
-                <a href="#" class="btn outline">Hire ME</a>
-                <a href="#" class="btn solid">See My Projects</a>
+                <a href="#" class="btn outline">HIRE ME</a>
+                <a href="#" class="btn solid">SEE MY PROJECTS</a>
             </div>
         </div>
         <div class="hero-img">
