--- a/project-1/index.html
+++ b/project-1/index.html
@@ -8,4 +8,11 @@
 </head>
 <body>
 
-       
+        <nav>
+           <a href="#">About Me</a>
+           <a href="#">Skills</agi>
+           <a href="#">Project</a>
+            <a href="#">Contact</a>
+        </nav>
+
+   
