--- a/project-1/index.html
+++ b/project-1/index.html
@@ -26,3 +26,7 @@
         </div>
         <div class="hero-img">
             <img src="https://images.unsplash.com/photo-1603575448878-868a20723f5d" alt="">
+        </div>
+    </section>
+</body>
+</html>
